[gd_scene load_steps=9 format=2]

[ext_resource path="res://background/tilesets/Tileset_3x3.tres" type="TileSet" id=1]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://characters/player/graphics/Soulless_Anim_Atlas.png" type="Texture" id=3]
[ext_resource path="res://characters/player/Sprite.gd" type="Script" id=4]
[ext_resource path="res://characters/player/graphics/Player_Shape.tres" type="Shape2D" id=5]
[ext_resource path="res://characters/player/graphics/Player_Run_Shape.tres" type="Shape2D" id=6]
[ext_resource path="res://characters/player/graphics/Player_Run_Anim.tres" type="Animation" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[node name="Level1" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_friction = 0.0
format = 1
tile_data = PoolIntArray( -262144, 0, 1, -262143, 0, 0, -262142, 0, 196610, -262141, 0, 196610, -262140, 0, 196610, -262139, 0, 196610, -262138, 0, 196610, -262137, 0, 196610, -262136, 0, 196610, -262135, 0, 196610, -262134, 0, 196610, -262133, 0, 196610, -262132, 0, 196610, -262131, 0, 196610, -262130, 0, 196610, -262129, 0, 196610, -262128, 0, 196610, -262127, 0, 196610, -262126, 0, 196610, -262125, 0, 196610, -262124, 0, 196610, -262123, 0, 196610, -262122, 0, 196610, -262121, 0, 196611, -196608, 0, 0, -196584, 1, 0, -196583, 1, 196610, -196582, 1, 196611, -131072, 0, 65536, -65536, 0, 65536, 0, 0, 65536, 18, 0, 196609, 19, 0, 196610, 20, 0, 196610, 21, 0, 196611, 65536, 0, 65536, 65544, 0, 1, 65545, 0, 196610, 65546, 0, 196611, 65549, 0, 196609, 65550, 0, 196610, 65551, 0, 196611, 131072, 0, 65536, 131080, 0, 65536, 196608, 0, 65536, 196614, 0, 196609, 196615, 0, 196610, 196616, 0, 131075, 196626, 0, 196609, 196627, 0, 196610, 196628, 0, 196610, 196629, 0, 196611, 262144, 0, 0, 327680, 0, 131073, 327681, 0, 0, 327682, 0, 196610, 327683, 0, 196610, 327684, 0, 196610, 327685, 0, 196610, 327686, 0, 196610, 327687, 0, 196610, 327688, 0, 196610, 327689, 0, 196610, 327690, 0, 196610, 327691, 0, 196610, 327692, 0, 196610, 327693, 0, 196610, 327694, 0, 196610, 327695, 0, 0, 327696, 0, 3, 327703, 0, 0, 393231, 1, 0, 393232, 0, 0, 393239, 0, 0, 458767, 1, 0, 458768, 0, 131073, 458769, 0, 0, 458770, 0, 196610, 458771, 0, 196610, 458772, 0, 196610, 458773, 0, 196610, 458774, 0, 0, 458775, 0, 131075, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 196610, 786452, 1, 196610, 786453, 1, 196610, 786454, 1, 196610, 786455, 1, 196610, 786456, 1, 196610, 786457, 1, 196610, 786458, 1, 196611 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 48, 144 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 3 )
vframes = 2
hframes = 4
script = ExtResource( 4 )

[node name="RestCollisionShape" type="CollisionShape2D" parent="Player"]
visible = false
shape = ExtResource( 5 )

[node name="RunCollisionShape" type="CollisionShape2D" parent="Player"]
visible = false
shape = ExtResource( 6 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 1.25, 1.25 )

[node name="AnimPlayer" type="AnimationPlayer" parent="Player"]
anims/Player_Run_Anim = ExtResource( 7 )
anims/Run = SubResource( 1 )

